k8s/monitoring/grafana.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        kind: dashboard
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  ports:
    - port: 3000 
      targetPort: 3000 
      name: grafana-port 
  selector:
    app: grafana
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ui-ing
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /graf
        backend:
          serviceName: grafana-service
          servicePort: 3000
